2008-08-30	Joel Sherrill <joel.sherrill@OARcorp.com>

	* acinclude.m4: Add bf537Stamp. Regenerate.

2008-08-18	Allan Hessenflow <allanh@kallisti.com>

	* shared/clock/clockdrv.c, shared/clock/rtc.c, shared/clock/tod.h,
	shared/console/console.c, shared/timer/timer.c: Removed.

2008-08-18	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/clock/tod.h: Add missing prototypes.

2008-08-15	Allan Hessenflow <allanh@kallisti.com>

	* acinclude.m4: Add bf537Stamp.

2007-12-11	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/clock/clockdrv.c: Eliminate copies of the Configuration Table.
	Use the RTEMS provided accessor macros to obtain configuration
	fields.

2007-09-10	Alain Schaefer <alani@easc.ch>

	* shared/start/start.S: Initialize bss to zero.

2007-08-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* shared/start/start.S: Fix typo of pO versus p0.

2007-04-17	Joel Sherrill <joel@OARcorp.com>

	* shared/clock/rtc.c, shared/timer/timer.c: Fix compile errors and
	address most warnings about constants being too large.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-30	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: New file.

2006-10-24	Joel Sherrill <joel@OARcorp.com>

	* shared/start/start.S: Eliminate hi, lo, HI, LO, and MK_BMSK.

2006-10-24	Alain Schaefer <alani@easc.ch>

	* configure.ac, eZKit533/configure.ac, eZKit533/include/bsp.h,
	shared/start/start.S: Make use of separated bfin helper .h files.

2006-06-05  Alain Schaefer <alani@easc.ch>

    * all files : Initial copy and port from no_cpu 