@@ -1,3 +1,7 @@
+2008-09-10	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* shared/bspgetworkarea.c: New file.
+
 2008-08-30	Joel Sherrill <joel.sherrill@OARcorp.com>
 
 	* acinclude.m4: Add bf537Stamp. Regenerate.
